--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,6 @@ git+https://github.com/iglu-contest/sample-factory.git@1.121.3.iglu
 git+https://github.com/iglu-contest/gridworld.git@master
 -f https://download.pytorch.org/whl/torch_stable.html
 torch==1.8.1+cu111
+torchvision==0.9.1+cu111
+torchaudio==0.8.1
+
